# puzzle

./: .gitignore  Cargo.toml  _headers  _headers.txt  book.txt  build.py  custom.html  foo.epub  foo.html  foo.txt  index-template.html  index.html  main.css  text.html
.cargo/: config.toml
pkg/: package.json  puzzle.d.ts  puzzle.js  puzzle_bg.wasm.d.ts
src/: bear.txt  book.rs  book_para.txt  chapter.rs  connect_the_dots.rs  crossword.rs  dyslexic_word_search.rs  epub.rs  lib.rs  main.css  main.rs  maze.rs  parse.py  parse_books.py  shape.rs  sudokus.rs  svg_list.txt  waldo.rs  word_search.rs  words.txt
wasm/: .rustc_info.json  puzzle.wasm
