[package]
name = "puzzle"
version = "0.1.1"
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bresenham = "0.1.1"
chrono ={version= "0.4.38", features=["wasmbind", "now"]}
fastrand = "2.2.0"
itertools = "0.13.0"
# number-theory = "0.0.24"
rayon = "1.10.0"
resvg = "0.44.0"
strum = "0.26.3"
strum_macros = "0.26.4"
wasm-bindgen = "0.2.97"
wasm-timer = "0.2.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
epub-builder = "0.7.4"

[profile.release]
strip = true 
opt-level = "z"
